# bc-sskr

./: .gitignore  .gitmodules  CLA.md  CONTRIBUTING.md  Makefile.in  README.md  REVIEW.md  SECURITY-REVIEW.md  build-wasm.sh  build_wasm.sh  config.h.in  configure  configure.ac  library.properties  sskr.html  sskr.js  sskr.wasm
.github/workflows/: ci.yml  static_anlyzer.yml
CLA-signed/: CLA.gorazdko.41F0EA1699A74C1E2FA41B538CF96BC3FF9DBBCE.asc  CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.asc
images/: README.md
reviews/: README.md
src/: Makefile.in  encoding.c  encoding.h  sskr-errors.h
test/: Makefile.in  test-utils.c  test-utils.h  test.c
wasm/: sskr.html
